<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_opt_refresh"
          android:title="@string/menu_refresh"
          android:titleCondensed="@string/menu_refresh"
          android:icon="@drawable/ic_menu_refresh"/>
    <item android:id="@+id/menu_opt_channels"
          android:title="@string/menu_channels"
          android:titleCondensed="@string/menu_channels"
          android:icon="@android:drawable/ic_menu_agenda">
    	<menu/>
    </item>
    <item android:id="@+id/menu_opt_preferences"
          android:title="@string/menu_preferences"
          android:titleCondensed="@string/menu_preferences"
          android:icon="@android:drawable/ic_menu_preferences"/>
    <item android:id="@+id/menu_opt_about"
          android:title="@string/menu_about"
          android:titleCondensed="@string/menu_about"
          android:icon="@android:drawable/ic_menu_info_details"/>
</menu>