<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/dialog_about"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10dp">
	<TextView android:id="@+id/description"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:layout_marginBottom="10dp"
              android:text="@string/app_description"/>
	<TextView android:id="@+id/website"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:textColorLink="@color/main_color"
              android:autoLink="web"
              android:text="@string/website"/>	
    <TextView android:id="@+id/contact"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:textColorLink="@color/main_color"
              android:autoLink="all"
              android:text="@string/contact"/>
    <TextView android:id="@+id/email"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:textColorLink="@color/main_color"
              android:autoLink="email"
              android:layout_marginBottom="25dp"
              android:text="@string/email"/>
    <TextView android:id="@+id/powered"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:textColorLink="@color/main_color"
              android:autoLink="web"
              android:text="@string/powered"/>
</LinearLayout>