<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:id="@+id/splash"
	android:orientation="vertical"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"> 
	<TextView
		android:id="@+id/name"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:paddingTop="50dp"
		android:textColor="@color/second_color"
		android:textStyle="bold"
		android:textSize="40dp"
		android:text="@string/app_name"/>
	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_below="@id/name"
		android:layout_centerHorizontal="true"
		android:paddingTop="20dp"
		android:paddingLeft="15dp"
		android:paddingRight="15dp"
		android:textColor="@color/second_color"
		android:textStyle="normal"
		android:textSize="15dp"
		android:text="@string/app_title"/>
	<TextView
		android:id="@+id/loading"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_below="@id/title"
		android:layout_centerHorizontal="true"
		android:paddingTop="20dp"
		android:textColor="@color/loading_color"
		android:textStyle="italic"
		android:textSize="25dp"
		android:text="@string/loading"/>
	<ImageView
		android:id="@+id/icon"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_below="@id/loading"
		android:layout_centerHorizontal="true"
		android:paddingTop="20dp"
		android:src="@drawable/icon"/>
	<TextView
		android:id="@+id/website"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		android:paddingBottom="10dp"
		android:textColor="@color/main_color"
		android:textStyle="normal"
		android:textSize="12dp"
		android:text="@string/website"/>
</RelativeLayout>